--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,11 @@ layout: two
 title:  Projects
 ---
 
-<h3>JavaScript game clones</h3>
-<ul>
-  <li><a href="/games/conway.html">Conway's Game of Life</a></li>
-  <li><a href="/games/pong.html">Pong</a></li>
-</ul>
+<h1>Projects</h1>
+<section>
+  <h2>JavaScript Game Clones</h2>
+  <ul>
+    <li><a href="/games/conway.html">Conway's Game of Life</a></li>
+    <li><a href="/games/pong.html">Pong</a></li>
+  </ul>
+</section>
