--- a/resume.html
+++ b/resume.html
@@ -1,62 +1,70 @@
 ---
-layout: default
-title:  Résumé
+layout: two
+title:  Resume
 ---
 
 {% assign resume = site.data.resume %}
-<article class="resume row offset-by-two eight columns">
 
-  <header class="">
-    <h1>{{ resume.name }}</h1>
-    <h2>{{ resume.label }}</h2>
-  </header>
+<!--<article class="resume row offset-by-one nine columns">-->
+<article class="resume">
+
+  <h1>Resume</h1>
 
   <section id="biography">
-    <h3>Biography</h3>
-    {% for bio in resume.biography %}
-    <p>{{ bio }}</p>
-    {% endfor %}
+    <h2>Bio</h2>
+    <div>
+      {% for bio in resume.biography %}
+      <p>{{ bio }}</p>
+      {% endfor %}
+    </div>
   </section>
 
   <section id="skills">
-    <h3>Skills</h3>
-    {% for skill in resume.skills %}
-    <strong>{{ skill.type }}</strong>
-    <ul class="skill-list">
-    {% for item in skill.items %}
-      <li>{{ item }}</li>
-    {% endfor %}
-    </ul>
-    {% endfor %}
+    <h2>Skills</h2>
+    <div>
+      {% for skill in resume.skills %}
+      <strong>{{ skill.type }}</strong>
+      <ul class="skill-list">
+      {% for item in skill.items %}
+        <li>{{ item }}</li>
+      {% endfor %}
+      </ul>
+      {% endfor %}
+    </div>
   </section>
 
   <section id="experience">
-    <h3>Experience</h3>
+    <h2>Work</h2>
+    <div>
     {% for job in resume.work %}
-    <div class="job">
-      <h5 class="job-position">{{ job.position }}</h5>
-      <div class="job-company"><a href="{{ job.website }}">{{ job.company }}</a></div>
-      <div class="job-duration">
-        {{ job.started_on }} - {{ job.ended_on | default: "Present" }}
-      </div>
-      <div class="accopmlishments">
-        <strong>Accomplishments</strong>
-        <ul>
-        {% for accomplishment in job.accomplishments %}
-          <li>{{ accomplishment }}</li>
-        {% endfor %}
-        </ul>
-      </div>
-      <div>
-        <strong>Technologies</strong>
-        <ul class="skill-list">
-        {% for tech in job.technologies %}
-          <li>{{ tech }}</li>
-        {% endfor %}
-        </ul>
-      </div>
-    </section>
+      <section class="job">
+        <header>
+          <h3>
+            {{ job.position }} @ <a href="{{ job.website }}">{{ job.company }}</a>
+          </h3>
+          <h4 class="job-duration">
+            {{ job.started_on }} - {{ job.ended_on | default: "Present" }}
+          </h4>
+        </header>
+        <div class="accopmlishments">
+          <strong>Accomplishments</strong>
+          <ul>
+          {% for accomplishment in job.accomplishments %}
+            <li>{{ accomplishment }}</li>
+          {% endfor %}
+          </ul>
+        </div>
+        <div>
+          <strong>Technologies</strong>
+          <ul class="skill-list">
+          {% for tech in job.technologies %}
+            <li>{{ tech }}</li>
+          {% endfor %}
+          </ul>
+        </div>
+      </section>
     {% endfor %}
+    </div>
   </section>
 
   <section id="education">
